--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Marcos Vinícius Cavalcante",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "mysql2": "^2.3.3",
